# motor-adapter

./: .coveragerc  .gitignore  README.md  compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci-lint.yml  ci-test.yml  ci.yml  release.yml
casbin_motor_adapter/: __init__.py  adapter.py
tests/: test_adapter.py
