[tool.poetry]
name = "casbin_motor_adapter"
version = "0.1.0"
description = "Motor Adapter for PyCasbin"
authors = ["wf-yamaday <wf.yamaday.job@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "casbin_motor_adapter"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
casbin = "^1.34.0"
motor = "^3.3.1"


[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
tox = "^4.11.3"
ruff = "^0.0.290"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "git-tag"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"
